# gameboy-emulator

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.sh
gameboy/: CMakeLists.txt
gameboy/src/: bus.cpp  bus.h  cart.cpp  cart.h  common.h  cpu.cpp  cpu.h  debug.cpp  debug.h  emu.cpp  emu.h  instructions.cpp  instructions.h  io.cpp  io.h  ppu.cpp  ppu.h  ram.cpp  ram.h  timer.cpp  timer.h  ui.cpp  ui.h
src/: main.cpp
